name:                rybu
version:             0.1.0.0
synopsis:            Dedan preprocessor
description:         Generates Dedan model from imperative code
homepage:            http://zyla.neutrino.re/rybu/
license:             BSD3
author:              Maciej Bielecki
maintainer:          mbieleck@stud.elka.pw.edu.pl
copyright:           2016 Maciej Bielecki
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:     AST
                     , Codegen
                     , CompileProc
                     , CompileServer
                     , Err
                     , Eval
                     , Parser

  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , mtl

  default-language:    Haskell2010

  default-extensions:  RecordWildCards

executable rybu
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base
                     , rybu
                     , containers

  default-language:    Haskell2010

test-suite hspec-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base
                     , rybu
                     , hspec
                     , HUnit
                     , raw-strings-qq
                     , containers
                     , parsec

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  default-extensions:  TemplateHaskell, QuasiQuotes, RecordWildCards
